--- a/app/views/atividades/edit.html.erb
+++ b/app/views/atividades/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Atividades#edit</h1>
-<p>Find me in app/views/atividades/edit.html.erb</p>
+<p>Editar Atividade</p>
+<%= render 'form' %>
+<%= link_to "Back", root_path %>
