--- a/app/views/atividades/new.html.erb
+++ b/app/views/atividades/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Atividades#new</h1>
-<p>Find me in app/views/atividades/new.html.erb</p>
+<p>Nova Atividade</p>
+<%= render 'form' %>
+<%= link_to "Back", root_path %>
