--- a/app/views/atividades/edit.html.erb
+++ b/app/views/atividades/edit.html.erb
@@ -1,3 +1,6 @@
-<p>Editar Atividade</p>
+<h1>Editing atividade</h1>
+
 <%= render 'form' %>
-<%= link_to "Back", root_path %>
+
+<%= link_to 'Show', @atividade %> |
+<%= link_to 'Back', atividades_path %>
