--- a/app/views/atividades/new.html.erb
+++ b/app/views/atividades/new.html.erb
@@ -1,3 +1,5 @@
-<p>Nova Atividade</p>
+<h1><%= t '.title'%></h1>
+
 <%= render 'form' %>
-<%= link_to "Back", root_path %>
+
+<%= link_to 'Back', atividades_path %>
