--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>AtividadesComplementares</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
+	<head>
+	  <title>AtividadesComplementares</title>
+	  <%= stylesheet_link_tag    "application", :media => "all" %>
+	  <%= javascript_include_tag "application" %>
+	  <%= csrf_meta_tags %>
+	</head>
 <body>
 
-<%= yield %>
+	<div id="content">
+		<% if notice.present? %>
+			<p id="notice"><%= notice %> </p>
+		<% end %>
+		<% if alert.present? %>
+			<p id="alert"><%= alert %> </p>
+		<% end %>
+		<%= yield %>
+	</div>
 
 </body>
 </html>
