--- a/app/views/atividades/new.html.erb
+++ b/app/views/atividades/new.html.erb
@@ -1,5 +1,3 @@
-<h1><%= t '.title'%></h1>
-
+<h1><%= t '.title'%></h1><BR />
 <%= render 'form' %>
-
-<%= link_to 'Back', atividades_path %>
+<%= link_to t('links.back'), atividades_path %>
