adicionando uploader e criação do model de alunos + routes

--- a/app/views/avaliadores/edit.html.erb
+++ b/app/views/avaliadores/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Avaliadores#edit</h1>
-<p>Find me in app/views/avaliadores/edit.html.erb</p>
+<h1><%= t '.title'%></h1><BR />
+<%= render 'form' %>
+<%= link_to t('links.back'), avaliadores_index_path %>
