--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
      		</div>
      		<div id="AvaliadorBoxButton">
         		<%= link_to image_tag("bootao22.png", :width => '300px',
-					:height =>'80px'),new_avaliador_session_path %>
+					:height =>'80px'),avaliador_session_path %>
      		</div>
      		<div class="rodape_caixa">&nbsp;</div>
  		</div>
