Ajustes na routes e no Avaliador model

--- a/app/assets/stylesheets/elements.css.scss
+++ b/app/assets/stylesheets/elements.css.scss
@@ -457,3 +457,13 @@ html[xmlns] #nav {
     background-color: rgb(205,44,36);
     color: rgb(240,240,240);
 }
+
+
+.radio_component{
+  margin: 6px;
+  margin-left: 2%;
+}
+
+#ident{
+  margin-left: 2px; 
+}
