--- a/app/views/avaliadores/new.html.erb
+++ b/app/views/avaliadores/new.html.erb
@@ -1,3 +1,7 @@
-<h1><%= t '.title'%></h1><BR />
+<BR />
+<strong>
+	<font size="9" color="red">*</font><label>&nbsp Campos Obrigatórios</label>
+</strong>
+<BR />
+
 <%= render 'form' %>
-<%= link_to t('links.back'), avaliadores_index_path %>
