--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   		<title><%= yield(:title) || "Atividades - Complementares" %></title>
 	  	<%= stylesheet_link_tag    :application, :media => :all %>
 	  	<%= javascript_include_tag :application %>
+	  	<%= javascript_include_tag :all %>
 	    <%= javascript_include_tag :defaults %>
 	  	<%= csrf_meta_tags %>
 
