--- a/app/views/avaliadores/index.html.erb
+++ b/app/views/avaliadores/index.html.erb
@@ -9,10 +9,10 @@
 				<!---->
 				</center></div>
 			<ul><li>
-<%= link_to "Atualizar Imagem","/avaliador/#{current_avaliador.id}/selecionar_imagem"   %>
+<%= link_to "Atualizar Imagem",selecionar_imagem_avaliador_path(current_avaliador.id)   %>
 			</li>
 			<li>
-<%= link_to 'Remover Imagem',"/avaliador/#{current_avaliador.id}/remover_imagem"%></li>
+<%= link_to 'Remover Imagem',remover_imagem_avaliador_path(current_avaliador.id) %></li>
 			</ul>
 </ul></div>
 <p id="loged_in">
