--- a/app/views/avaliadores/_form.html.erb
+++ b/app/views/avaliadores/_form.html.erb
@@ -68,9 +68,6 @@
     </span>
   </div>
   <div class="botao_left">
-        <p>
-        <button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
-            <%= link_to t('links.back'), avaliadores_index_path %>
-        </button>
+            <%= link_to t('links.back'), avaliadores_index_path, :class=>"botao", :id=>'id_botao' %>
     </div>
 <% end %>
