--- a/app/views/avaliadores/edit.html.erb
+++ b/app/views/avaliadores/edit.html.erb
@@ -1,3 +1,43 @@
-<h1><%= t '.title'%></h1><BR />
-<%= render 'form' %>
-<%= link_to t('links.back'), avaliadores_index_path %>
+<% @user = current_avaliador.nome %>
+
+<strong>
+  <p>
+    <font size="9" color="red"></font>
+    <label>
+      &nbsp <%= t('form_messages.requiredfields')%>
+    </label>
+  </p>
+</strong>
+
+<FIELDSET>
+    <LEGEND>
+    <h2><%= label_tag I18n.t('avaliadores.edit.profile', :name=> @user) %></h2>
+    </LEGEND>
+
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+  <%= devise_error_messages! %>
+
+  <div><%= f.label :email %><br />
+  <%= f.email_field :email, :autofocus => true %></div>
+
+  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+  <% end %>
+
+  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+  <%= f.password_field :password, :autocomplete => "off" %></div>
+
+  <div><%= f.label :password_confirmation %><br />
+  <%= f.password_field :password_confirmation %></div>
+
+  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+  <%= f.password_field :current_password %></div>
+
+  <div><%= f.submit "Update" %></div>
+<% end %>
+
+<h3>Cancel my account</h3>
+
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+
+<%= link_to "Back", :back %>
