--- a/app/views/avaliadores/index.html.erb
+++ b/app/views/avaliadores/index.html.erb
@@ -1,6 +1,6 @@
 <div id="aluno_logado" class="button">
 <fieldset>
-	<legend >Logado</legend>
+	<legend ><%= t('.signed_in') %></legend>
 	<div id="facemenu">
 		<ul>
 			<li>
@@ -9,10 +9,10 @@
 				<!---->
 				</center></div>
 			<ul><li>
-<%= link_to "Atualizar Imagem",selecionar_imagem_avaliador_path(current_avaliador.id)   %>
+<%= link_to t('.ProfileImage'),selecionar_imagem_avaliador_path(current_avaliador.id)   %>
 			</li>
 			<li>
-<%= link_to 'Remover Imagem',remover_imagem_avaliador_path(current_avaliador.id) %></li>
+<%= link_to t('.RemoveProfileImage'),remover_imagem_avaliador_path(current_avaliador.id) %></li>
 			</ul>
 </ul></div>
 <p id="loged_in">
@@ -20,6 +20,6 @@
 <%= label_tag :titulacao%> <%= current_avaliador.titulacao %><br />
 <%= label_tag :matricula%> <%= current_avaliador.matricula %>
 </p>
-<%= link_to "Sair", avaliador_session_out_path, :method => :get, :class =>"button" %>
+<%= link_to t('.logout'), avaliador_session_out_path, :method => :get, :class =>"button" %>
 </fieldset>
 </div> 
